test/admission/projectsuspension/02-test-project.yaml
apiVersion: resourcemanager.miloapis.com/v1alpha1
kind: Project
metadata:
  name: admission-suspension-project
spec:
  ownerRef:
    kind: Organization
    name: admission-suspension-org
