test/admission/projectsuspension/03-projectsuspension.yaml
apiVersion: resourcemanager.miloapis.com/v1alpha1
kind: ProjectSuspension
metadata:
  name: admission-suspension-1
spec:
  projectRef:
    name: admission-suspension-project
  reason: Abuse
  requestedBy: e2e-test
  reinstateAuthority: Operator
