test/admission/projectsuspension/04-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns-to-delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns-to-update
